# luma

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
evals/: evaluators.py  helpers.py  models.py  runner.py  smoke.py
evals/usecase/query_command/: _fixtures.py  date_parsing.baseline.json  date_parsing.py  event_detail.py  filtering.baseline.json  filtering.py  location.baseline.json  location.py  semantic.baseline.json  semantic.py  text.baseline.json  text.py
scripts/dev/: debug_cli.py
src/: chat.py  cli.py  command_chat.py  command_query.py  command_refresh.py  config.py  download.py  query.py  refresh.py
src/agent/: __init__.py  agent.py
src/luma/: __main__.py  chat.py  cli.py  command_chat.py  command_like.py  command_query.py  command_refresh.py  command_suggest.py  config.py  download.py  enrich.py  event_store.py  models.py  mongo_provider.py  preference_store.py  query.py  ranker.py  ranker_prompt.md  refresh.py  user_config.py
src/luma/agent/: __init__.py  agent.py  tool.py
src/luma/agent/prompts/: ranker.md  system.md  system.txt
src/luma/agent/tools/: __init__.py  get_disliked_events.py  get_event_detail.py  get_liked_events.py  query_events.py
src/luma/data/: coordinates-to-city.json
tests/: test_cli.py
tests/e2e/: test_chat_e2e.py  test_cli_e2e.py
tests/unit/: test_refresh_sources.py
