[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luma"
version = "0.1.0"
description = "CLI tool to discover and filter Luma events with AI-powered suggestions"
requires-python = ">= 3.12"
authors = [{name = "Vitalii Mishchenko"}]
keywords = ["luma", "events", "meetups", "cli", "llm", "ai", "event-discovery"]
dependencies = ["any-llm-sdk[anthropic,ollama]", "pydantic", "python-dotenv", "logfire", "pymongo"]

[project.urls]
Homepage = "https://github.com/vm-mishchenko/luma"
Repository = "https://github.com/vm-mishchenko/luma"
Issues = "https://github.com/vm-mishchenko/luma/issues"

[project.optional-dependencies]
dev = ["pytest", "pexpect", "pydantic-evals[logfire]"]

[project.scripts]
luma = "luma.cli:main"

[tool.setuptools.package-data]
"luma.agent" = ["prompts/*.md"]
"luma.data" = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
